# hexeract

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bump.yml  ci.yml  docs.yml  integration.yml  release.yml
crates/hexeract/: Cargo.toml
crates/hexeract-bus/: Cargo.toml
crates/hexeract-bus-rabbitmq/: Cargo.toml
crates/hexeract-bus-rabbitmq/examples/: 03_bus_pubsub.rs
crates/hexeract-bus-rabbitmq/src/: confirm.rs  connection.rs  lib.rs  pool.rs  topology.rs  transport.rs  worker.rs
crates/hexeract-bus-rabbitmq/tests/: integration.rs
crates/hexeract-bus/src/: envelope.rs  error.rs  handler.rs  lib.rs  message.rs  raw_publish.rs  topology.rs  transport.rs
crates/hexeract-cli/: Cargo.toml
crates/hexeract-cli/examples/: topology.toml
crates/hexeract-cli/src/: cli.rs  error.rs  main.rs
crates/hexeract-cli/src/commands/: mod.rs
crates/hexeract-cli/src/commands/bus/: declare.rs  mod.rs  peek.rs  purge.rs
crates/hexeract-cli/src/commands/outbox/: apply.rs  check.rs  mod.rs  patch.rs
crates/hexeract-cli/tests/: cli_integration.rs
crates/hexeract-core/: Cargo.toml
crates/hexeract-core/examples/: 01_command_handler.rs
crates/hexeract-core/src/: command.rs  context.rs  envelope.rs  error.rs  handler.rs  ids.rs  lib.rs  middleware.rs  notification.rs  query.rs  registration.rs
crates/hexeract-core/tests/: handler_macro_itself.rs
crates/hexeract-examples/: Cargo.toml  README.md
crates/hexeract-examples/examples/: 00_smoke.rs  01_command_handler.rs  02_outbox_transactional.rs  03_bus_pubsub.rs  04_bus_mediator.rs  05_orders_to_payments.rs
crates/hexeract-macros/: Cargo.toml
crates/hexeract-macros/src/: expand.rs  krate.rs  lib.rs  parse.rs
crates/hexeract-macros/tests/: integration.rs  ui.rs
crates/hexeract-macros/tests/ui/: fail_ctx_mut.rs  fail_ctx_mut.stderr  fail_ctx_wrong_type.rs  fail_ctx_wrong_type.stderr  fail_generic_impl_handler.rs  fail_generic_impl_handler.stderr  fail_lifetime_handler.rs  fail_lifetime_handler.stderr  fail_missing_kind.rs  fail_missing_kind.stderr  fail_no_result_return.rs  fail_no_result_return.stderr  fail_non_async_free.rs  fail_non_async_free.stderr  fail_non_async_impl.rs  fail_non_async_impl.stderr  fail_notification_arc_arity.rs  fail_notification_arc_arity.stderr  fail_notification_arc_non_std.rs  fail_notification_arc_non_std.stderr  fail_notification_arc_ref.rs  fail_notification_arc_ref.stderr  fail_notification_non_unit.rs  fail_notification_non_unit.stderr  fail_notification_not_arc.rs  fail_notification_not_arc.stderr  fail_reference_message.rs  fail_reference_message.stderr  fail_trait_impl.rs  fail_trait_impl.stderr  fail_tuple_message.rs  fail_tuple_message.stderr  fail_unknown_kind.rs  fail_unknown_kind.stderr  fail_wrong_arity.rs  fail_wrong_arity.stderr  fail_wrong_output_type.rs  fail_wrong_output_type.stderr  pass_notification_impl_arc.rs  pass_pub_handler_missing_docs_allowed.rs
crates/hexeract-mediator/: Cargo.toml
crates/hexeract-mediator/src/: erased.rs  lib.rs  terminal.rs
crates/hexeract-mediator/tests/: integration.rs
crates/hexeract-middleware/: Cargo.toml
crates/hexeract-middleware/src/: lib.rs  timeout.rs  tracing.rs
crates/hexeract-middleware/tests/: integration.rs
crates/hexeract-outbox/: Cargo.toml
crates/hexeract-outbox-postgres/: Cargo.toml
crates/hexeract-outbox-postgres/benches/: publish_in_tx.rs
crates/hexeract-outbox-postgres/examples/: 02_outbox_two_databases.rs  README.md
crates/hexeract-outbox-postgres/src/: builder.rs  lib.rs  publisher.rs  schema.rs  store.rs
crates/hexeract-outbox-postgres/tests/: integration_pg.rs
crates/hexeract-outbox-sql/: Cargo.toml
crates/hexeract-outbox-sql/src/: dialect.rs  envelope.rs  lib.rs  mysql.rs  postgres.rs  sqlite.rs  validate.rs
crates/hexeract-outbox-sql/tests/: integration_mysql.rs  integration_pg.rs  integration_sqlite.rs
crates/hexeract-outbox/src/: envelope.rs  error.rs  event.rs  handler.rs  idempotent.rs  lib.rs  publisher.rs  worker.rs
crates/hexeract-scheduler/: Cargo.toml
crates/hexeract-scheduler-sql/: Cargo.toml
crates/hexeract-scheduler-sql/src/: lib.rs  mapping.rs  mysql.rs  postgres.rs  schema.rs  sqlite.rs  statements.rs  timestamp.rs  validate.rs
crates/hexeract-scheduler-sql/tests/: integration_mysql.rs  integration_pg.rs  integration_sqlite.rs
crates/hexeract-scheduler-sql/tests/common/: mod.rs
crates/hexeract-scheduler/src/: builder.rs  bus_sink.rs  control.rs  error.rs  lease.rs  lib.rs  mediator_sink.rs  memory.rs  occurrence.rs  outbox_sink.rs  schedule.rs  sink.rs  snapshot.rs  store.rs  target.rs  trigger.rs  worker.rs
crates/hexeract-umbrella-tests/: Cargo.toml
crates/hexeract-umbrella-tests/src/: lib.rs
crates/hexeract-umbrella-tests/tests/: scheduler.rs  umbrella.rs
crates/hexeract/src/: lib.rs
docs/: GOVERNANCE.md  MSRV_POLICY.md  RELEASE_PROCESS.md  SEMVER_POLICY.md  getting-started.md  index.md  outbox-architecture.md  outbox-postgres-schema.md
docs/architecture/: bus-flow.md  mediator-flow.md  outbox-flow.md  overview.md
docs/clients/: nubster-identity-outbox.md
docs/concepts/: ack-modes.md  correlation-id.md  handler-macro.md  mediator-cqrs.md  message-envelope.md  middleware-pipeline.md  outbox-pattern.md  retry-policy.md  sqlite-outbox-concurrency.md  topology.md  worker.md
docs/cookbook/: handler-with-state.md  notification-fan-out.md  outbox-plus-mediator.md  sanity-check-handlers.md  wire-tracing-and-timeout.md
docs/design/: outbox-mvp-requirements.md
docs/getting-started/: bus-quick-start.md  mediator-quick-start.md  outbox-quick-start.md
docs/migration/: from-mediatr.md  from-wolverine.md
docs/operations/: migration-v0.1-v0.2.md  migration-v0.3-v0.4.md  migration-v0.4-v0.5.md  observability.md  production-checklist.md  (+1 more)
scripts/: publish-or-skip.sh  release.sh
(+11 files in other folders)
