[workspace]
resolver = "3"
members = [
    "crates/hexeract-core",
    "crates/hexeract-macros",
    "crates/hexeract-mediator",
    "crates/hexeract-middleware",
    "crates/hexeract",
    "crates/hexeract-outbox",
    "crates/hexeract-outbox-sql",
    "crates/hexeract-bus",
    "crates/hexeract-bus-rabbitmq",
    "crates/hexeract-cli",
    "crates/hexeract-umbrella-tests",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nubster-opensources/hexeract"
homepage = "https://github.com/nubster-opensources/hexeract"
authors = ["Nubster"]
keywords = ["messaging", "mediator", "cqrs", "outbox", "sagas"]
categories = ["asynchronous", "network-programming"]

[workspace.dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.8", features = ["async_tokio"] }
uuid = { version = "1", features = ["v4", "v7"] }
thiserror = "2"
tokio-util = { version = "0.7", default-features = false }
tracing = "0.1"
trait-variant = "0.1"
inventory = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"
trybuild = "1"
proc-macro-crate = "3"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-ring"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
fastrand = "2"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unreachable_pub = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
