[package]
name = "hexeract-bus-rabbitmq"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "RabbitMQ transport backend for the Hexeract messaging framework, powered by lapin"
readme = "../../README.md"
exclude = ["/tests", "/examples", "/benches"]
keywords = ["messaging", "bus", "rabbitmq", "amqp", "lapin"]
categories = ["asynchronous", "network-programming"]

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
futures-util = { workspace = true, features = ["std"] }
hexeract-bus = { path = "../hexeract-bus", version = "0.4" }
hexeract-core = { path = "../hexeract-core", version = "0.4" }
lapin = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[dev-dependencies]
serde = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["rabbitmq"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
