[package]
name = "hexeract-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Hexeract unified command-line interface"
readme = "../../README.md"
exclude = ["/tests", "/examples", "/benches"]
keywords = ["messaging", "cli", "outbox", "hexeract"]
categories = ["command-line-utilities", "asynchronous"]

[[bin]]
name = "hexeract"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
hexeract-bus = { path = "../hexeract-bus", version = "0.4" }
hexeract-bus-rabbitmq = { path = "../hexeract-bus-rabbitmq", version = "0.4" }
hexeract-outbox = { path = "../hexeract-outbox", version = "0.4" }
hexeract-outbox-sql = { path = "../hexeract-outbox-sql", version = "0.4", default-features = false, features = ["postgres"] }
clap = { workspace = true }
lapin = { workspace = true }
native-tls = "0.2"
postgres-native-tls = "0.5"
serde = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
toml = "1.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["rabbitmq", "postgres"] }
tokio = { workspace = true }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
