[package]
name = "hexeract-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core traits and types for the Hexeract messaging framework"
readme = "../../README.md"
exclude = ["/tests", "/examples", "/benches"]
keywords = ["messaging", "mediator", "cqrs", "command", "handler"]
categories = ["asynchronous", "network-programming"]

[lints]
workspace = true

[dependencies]
uuid = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
trait-variant = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "uuid/serde"]

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
