[package]
name = "hexeract-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core traits and types for the Hexeract messaging framework"
readme = "../../README.md"
exclude = ["/tests", "/examples", "/benches"]
keywords = ["messaging", "mediator", "cqrs", "command", "handler"]
categories = ["asynchronous", "network-programming"]

[lints]
workspace = true

[dependencies]
uuid = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
trait-variant = { workspace = true }
inventory = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "uuid/serde"]

[dev-dependencies]
# Path-only (no version) on purpose: this is a dev-dependency cycle
# (hexeract-macros dev-depends back on hexeract-core), and hexeract-core
# publishes first. A versioned requirement would force cargo to resolve
# hexeract-macros from crates.io at publish time, before it exists there.
# Cargo drops a version-less dev-dependency from the published manifest, so
# the cycle never reaches the registry. The macro self-test that needs it
# is excluded from the package anyway (see `exclude`).
hexeract-macros = { path = "../hexeract-macros" }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
