[package]
name = "hexeract-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Procedural macros for the Hexeract messaging framework"
keywords = ["messaging", "mediator", "macro", "handler"]
categories = ["asynchronous", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
