[package]
name = "hexeract-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Procedural macros for the Hexeract messaging framework"
keywords = ["messaging", "mediator", "macro", "handler"]
categories = ["asynchronous", "rust-patterns"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
