[package]
name = "hexeract-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Procedural macros for the Hexeract messaging framework"
readme = "../../README.md"
exclude = ["/tests", "/examples", "/benches"]
keywords = ["messaging", "mediator", "macro", "handler"]
categories = ["asynchronous", "rust-patterns"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
hexeract-core = { path = "../hexeract-core", version = "0.5" }
hexeract-mediator = { path = "../hexeract-mediator", version = "0.5" }
tokio = { workspace = true, features = ["macros", "rt"] }
trybuild = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
