[package]
name = "hexeract-mediator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "In-process mediator implementation for the Hexeract messaging framework"
keywords = ["messaging", "mediator", "cqrs", "dispatch"]
categories = ["asynchronous", "network-programming"]
