[package]
name = "hexeract-mediator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "In-process mediator implementation for the Hexeract messaging framework"
readme = "../../README.md"
exclude = ["/tests", "/examples", "/benches"]
keywords = ["messaging", "mediator", "cqrs", "dispatch"]
categories = ["asynchronous", "network-programming"]

[lints]
workspace = true

[dependencies]
hexeract-core = { path = "../hexeract-core", version = "0.4" }
futures-util = { workspace = true }
inventory = { workspace = true }
thiserror = { workspace = true }
trait-variant = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "sync"] }
uuid = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
