[package]
name = "hexeract-middleware"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Built-in middlewares for the Hexeract messaging framework: tracing spans and dispatch timeouts."
readme = "../../README.md"
keywords = ["messaging", "middleware", "tracing", "timeout", "hexeract"]
categories = ["asynchronous"]

[lints]
workspace = true

[dependencies]
hexeract-core = { path = "../hexeract-core", version = "0.2" }
tracing = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
hexeract-mediator = { path = "../hexeract-mediator", version = "0.2" }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "test-util"] }
tracing-test = { workspace = true }
