[package]
name = "hexeract-middleware"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Built-in middlewares for the Hexeract messaging framework: tracing spans and dispatch timeouts."
readme = "../../README.md"
exclude = ["/tests", "/examples", "/benches"]
keywords = ["messaging", "middleware", "tracing", "timeout", "hexeract"]
categories = ["asynchronous"]

[lints]
workspace = true

[dependencies]
hexeract-core = { path = "../hexeract-core", version = "0.4" }
tracing = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
hexeract-mediator = { path = "../hexeract-mediator", version = "0.4" }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "test-util"] }
tracing-test = { workspace = true }
