[package]
name = "hexeract-outbox-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "PostgreSQL backend for the Hexeract outbox via deadpool_postgres"
keywords = ["messaging", "outbox", "postgres", "deadpool", "transactional"]
categories = ["asynchronous", "database"]

[lints]
workspace = true

[dependencies]
hexeract-outbox = { path = "../hexeract-outbox", version = "0.0.1" }
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
serde_json = { workspace = true }
trait-variant = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
serde = { workspace = true }
tokio = { workspace = true }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
