[package]
name = "hexeract-outbox-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "PostgreSQL backend for the Hexeract outbox via deadpool_postgres"
readme = "../../README.md"
exclude = ["/tests", "/examples", "/benches"]
keywords = ["messaging", "outbox", "postgres", "deadpool", "transactional"]
categories = ["asynchronous", "database"]

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
hexeract-outbox = { path = "../hexeract-outbox", version = "0.2.0" }
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
hexeract-core = { path = "../hexeract-core", version = "0.2.0" }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "publish_in_tx"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
