[package]
name = "hexeract-outbox-sql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "SQL backends for the Hexeract outbox via sqlx with postgres, mysql and sqlite feature flags"
readme = "../../README.md"
exclude = ["/tests", "/examples", "/benches"]
keywords = ["messaging", "outbox", "sqlx", "postgres", "transactional"]
categories = ["asynchronous", "database"]

[lints]
workspace = true

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]

[dependencies]
async-trait = { workspace = true }
hexeract-outbox = { path = "../hexeract-outbox", version = "0.5" }
sqlx = { workspace = true, features = ["uuid", "json", "time"] }
time = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
hexeract-core = { path = "../hexeract-core", version = "0.5" }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres", "mysql"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
