[package]
name = "hexeract-outbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Transactional outbox pattern primitives for the Hexeract messaging framework"
keywords = ["messaging", "outbox", "cqrs", "events", "transactional"]
categories = ["asynchronous", "database"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
