[package]
name = "hexeract-outbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Transactional outbox pattern primitives for the Hexeract messaging framework"
readme = "../../README.md"
exclude = ["/tests", "/examples", "/benches"]
keywords = ["messaging", "outbox", "cqrs", "events", "transactional"]
categories = ["asynchronous", "database"]

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
hexeract-core = { path = "../hexeract-core", version = "0.3" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
trait-variant = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
