[package]
name = "hexeract-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Backend-agnostic scheduling primitives for the Hexeract messaging framework"
readme = "../../README.md"
exclude = ["/tests", "/examples", "/benches"]
keywords = ["messaging", "scheduler", "cron", "outbox", "events"]
categories = ["asynchronous", "date-and-time"]

[lints]
workspace = true

[features]
default = []
bus = ["dep:hexeract-bus"]
mediator = ["dep:hexeract-core", "dep:hexeract-mediator", "dep:serde"]
outbox = []

[dependencies]
fastrand = { workspace = true }
hexeract-bus = { path = "../hexeract-bus", version = "0.5", optional = true }
hexeract-core = { path = "../hexeract-core", version = "0.5", optional = true }
hexeract-mediator = { path = "../hexeract-mediator", version = "0.5", optional = true }
hexeract-outbox = { path = "../hexeract-outbox", version = "0.5" }
isochron = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
trait-variant = { workspace = true }
uuid = { workspace = true, features = ["v5", "v7"] }

[dev-dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
tracing-test = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
