[package]
name = "hexeract-umbrella-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
hexeract = { path = "../hexeract", version = "0.4", features = ["macros", "mediator"] }

[dev-dependencies]
tokio = { workspace = true }
